<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.kevingleason.pubnubchat.LoginActivity">

    <TextView
        android:text="@string/login"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/pn_blue"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="#333"
        android:gravity="center"
        android:id="@+id/login_username"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp" />


    <EditText
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="#333"
        android:gravity="center"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_submit"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:background="@color/pn_red"
        android:layout_marginTop="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="joinChat"/>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/signup"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:background="@color/pn_red"
        android:layout_marginTop="330dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/pow_by_pubnub"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
